change css for navigation

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -1,3 +1,7 @@
+//header
+#portal-logo {
+    text-align: center;
+}
 .portletNavigationTree .portletHeader {
     background: @theme;
     padding: 1em;
@@ -25,4 +29,493 @@ dl.portletNavigationTree dt.portletHeader a{
     border: 1px solid @bg-nav-fac;
     height: 14em;
     box-shadow: 2px 2px 4px #f1efef;
+}
+.coordinates{
+    margin-bottom:2em;
+    float: left;
+    width: 100%;
+}
+
+.activity {
+    clear: both;
+}
+
+.subsection-services-communaux-travaux-infos-travaux .photoAlbumEntryWrapper img {
+    display: none;
+}
+
+.section-annuaire.portaltype-organization #portal-columns, .section-annuaire.portaltype-person #portal-columns {
+    max-width: 1200px;
+}
+
+.template-facetednavigation_view .organization-entry, body.template-facetednavigation_view .contact-entry {
+    background: #f7f7f7 !important;
+}
+
+.template-facetednavigation_view .organization-title, .template-facetednavigation_view .contact-title,
+.template-facetednavigation_view .organization-entry .contact-info, .template-facetednavigation_view .contact-entry .contact-info {
+    margin-left: 1em;
+}
+
+.contact-entry {
+    margin-right: 1.5% !important;
+    width: 18.5% !important;
+    margin-bottom: 0.5%;
+}
+
+.contact-details {
+    width: 50%;
+    float: left;
+}
+
+#content fieldset.Schedule {
+    border: 0px solid white;
+}
+
+#content fieldset.Schedule legend {
+    display:none;
+}
+#faceted-top-column::before{
+    display:none !important;
+}
+// Other-action
+#other-actions {
+    padding-top: 0;
+}
+
+#right-actions-viewlet{
+   right:1.5em;
+}
+
+#right-actions-viewlet-inner{
+   top:1em;
+   padding-top:0;
+}
+
+#right-actions-viewlet-inner>a::before{
+    display:none;
+}
+
+#other-actions div:first-child::after {
+    border-right: 0px solid gray;
+}
+
+#other-actions div:first-child::before {
+    content: "";
+}
+
+#right-actions-viewlet [class^="icon-"]::before,
+#right-actions-viewlet [class*=" icon-"]::before {
+    margin-left: 0em;
+}
+
+#right-actions-viewlet-inner a{
+    top:0;
+}
+
+#right-actions-viewlet-inner .iconifiedDocumentActions ul{
+   margin:0;
+}
+
+#right-actions-viewlet-inner>a {
+    height: 1em;
+    padding: 1em;
+    display: inline-block;
+    width: 1em;
+    margin-top: 0.25em;
+    margin-bottom: 0;
+}
+
+#right-actions-viewlet .icons_only a, #right-actions-viewlet .iconifiedDocumentActions a{
+    margin-top: 0.25em;
+}
+
+#right-actions-viewlet-inner>a::after{
+   background:#000;
+   color: white;
+   left:0;
+   margin-left:0 !important;
+   font-size:100% !important;
+   padding:1em !important;
+   width:1em;
+}
+
+
+#right-actions-viewlet #other-actions li a:before{
+    padding: 1em;
+    color: white;
+}
+
+#right-actions-viewlet .sc_social_bookmarks li a.icon-Facebook::before {
+    background: #3b5998;
+}
+
+.icon-print:before {
+    background: #d7004e;
+}
+
+.icon-sendtomanager::before {
+    background: #d7004e;
+}
+//Columns
+div.width-1\:4 {
+    width: 26.75%;
+}
+
+div.position-1\:4 {
+    margin-left: -70.875%;
+}
+
+div.width-3\:4 {
+    width: 71.25%;
+}
+dl.portlet ul.navTree .navTreeCurrentItem, dl.portlet ul.navTree a:hover {
+    color: #d7004e !important;
+}
+
+dl.portlet ul.navTreeLevel1 .navTreeItem {
+    padding-left: 0em;
+}
+
+#portal-columns #portal-column-one .portletNavigationTree dd ul.navTreeLevel1 li a {
+    padding-left: 2em !important;
+    background: #f5f5f5;
+}
+
+#portal-columns #portal-column-one .portletNavigationTree dd ul li a {
+    padding: 1em !important;
+    border-top: 2px solid white; 
+}
+//vie politique
+.subsection-vie-politique-conseil-communal .photoAlbumEntry img {
+    display: none;
+}
+//navigation
+#portal-globalnav li a:focus {
+    outline: medium none;
+}
+
+.navigation-view-menu {
+    float: left;
+    margin-bottom: 1.5%;
+    margin-right: 1.5%;
+    position: relative;
+    width: 31.75%;
+}
+
+.navigation-view-menu .leadimage-navigation {
+    width: 100%;
+    max-width:100%;
+}
+
+
+.navigation-view-menu-description:hover, 
+h2.navigation-view-menu-title:hover + .navigation-view-menu-description {
+    background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
+    color: white !important;
+    height: 70%;
+    padding: 0 1em 1em !important;
+    position: absolute;
+    visibility: visible;
+}
+
+.navigation-view-menu-description, 
+h2.navigation-view-menu-title + .navigation-view-menu-description {
+    bottom: 0;
+    box-sizing: border-box;
+    color: transparent;
+    height: 70%;
+    overflow: hidden;
+    padding: 2em 1em 0;
+    position: absolute;
+    transition: background 0.5s, padding 1s ease 0s;
+}
+
+a:hover h2 {
+    background: black none repeat scroll 0 0;
+    bottom: 70%;
+    height: 30%;
+    position: absolute;
+}
+
+h2.navigation-view-menu-title {
+    background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
+    bottom: 0;
+    box-sizing: border-box;
+    color: white;
+    display: block;
+    font-size: 1.5em;
+    height: 30%;
+    line-height: 1em;
+    padding: 0.5em;
+    position: absolute;
+    width: 100%;
+}
+ul.navTreeLevel1 {
+    text-transform: none;
+}
+.portletNavigationTree .navTree {
+    position: relative;
+}
+//galleria
+
+.galleria {
+    box-shadow: 0 0 0 0 #aaa;
+}
+
+.galleria-info-text {
+    background-color: #fff;
+}
+
+#fancybox-overlay {
+    background: white none repeat scroll 0 0!important;
+    opacity: 1 !important;
+}
+//homepage
+.zoom-1, .zoom-2 {
+    display: block;
+}
+.main-homepage #nav-wrapper {
+    top: 20em;
+}
+
+.main-homepage #portal-columns {
+    top: -10em;
+}
+//a trier
+.bloc-document.zoom-1, .bloc-document.zoom-2 {
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+#content #flex #carousel-actualites .flex-viewport .flex-caption h2 a {
+    color: #333 !important;
+}
+
+.publication-date {
+    display: none;
+}
+
+.LSBox {
+    background: transparent none repeat scroll 0 0;
+}
+
+#hidden-search {
+    margin-top: -1.3em !important;
+}
+
+ul.navTreeLevel0 {
+    width: 100%;
+}
+
+
+.highslide-container .highslide-dimming {
+    background: white none repeat scroll 0 0;
+    opacity: 1 !important;
+}
+
+.nav-is-stuck #right-actions-viewlet-inner a::after{
+    color: white;
+}
+
+
+h2.tileHeadline [href*=".pdf"]{
+    background: rgba(0, 0, 0, 0) url("pdf_icon.png") no-repeat scroll left 0.4em;
+    padding-left: 1em;
+}
+
+#content #belowContentContact .related-contact {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 49%;
+}
+
+div.faceted-select2-container, .faceted_select {
+    max-width: 200px;
+    min-width: 100px;
+}
+
+.select2-drop-active {
+    width: auto !important;
+}
+
+.subsection-services-communaux-services-communaux .photoAlbumEntry img {
+    float: left;
+    margin-right: 1em;
+    max-width: 100%;
+    width: auto;
+}
+
+input {
+    border: 1px solid lightgrey;
+    border-radius: 2px;
+    padding: 0.25em 0.5em;
+}
+
+button[data-select2-open] {
+    display: none;
+}
+
+#cpskin-banner {
+    z-index: 1;
+}
+
+.sc_social_bookmarks_wrapper {
+    border: 0 solid #ccc;
+    padding: 0;
+}
+
+.fax {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0!important;
+    padding: 0 !important;
+}
+
+fieldset#folder-listing,
+.userrole-anonymous #form-groups-categorization,
+#form-groups-coordinates,
+.userrole-anonymous #form-groups-settings, 
+.userrole-anonymous #folder-listing, 
+.userrole-anonymous .contact-selection,
+.userrole-anonymous #contacts-facetednav-batchactions,
+.userrole-anonymous .faceted-widget.faceted-radio-widget.section-soutenu-par,
+.userrole-anonymous .faceted-widget.faceted-radio-widget.section-dans-le-cadre-de,
+#organization #type,
+#activity > label,
+#formfield-form-widgets-contenu label,
+fieldset#form-groups-categorization, 
+fieldset#form-groups-settings, 
+fieldset#form-groups-related_contacts,
+#form-groups-schedule .field label,  
+#form-groups-schedule .field > br,
+#personaltools-join,
+#formfield-form-widgets-theme,
+.subsection-administration-services-communaux .photoAlbumEntry img {
+    display: none !important;
+}
+
+.wrapped-coord {
+    float: left;
+    width: 50%;
+}
+
+#aboveContentContact .schedule {
+    float: right;
+    width:50%;
+}
+
+
+.schedule > div {
+    float: right;
+}
+
+.schedule::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.schedule-widget-day {
+    clear: both;
+}
+
+.schedule-widget-day > div {
+    float: left;
+    margin-right: 0.5em;
+    padding: 0.5em 0;
+}
+
+.schedule-widget-day .comment {
+    font-size: 100%;
+    font-style: italic;
+    margin: 0;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.schedule-widget-day .title {
+    box-sizing: border-box;
+    font-weight: normal;
+    min-width: 76px;
+    padding-left: 0.75em;
+}
+
+.schedule-widget-day:nth-child(2n) {
+    background: #f1f1f1 none repeat scroll 0 0;
+    float: left;
+}
+
+.faceted-empty-column {
+    display: none;
+}
+
+#faceted-results .day .photoAlbumEntry {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 1% 1% 0.5%;
+    width: 25%;
+}
+
+
+.faceted-top-column .faceted-alphabetic-widget {
+    max-width: 32%;
+}
+
+.faceted_letter {
+    float: left;
+}
+
+#center-and-left-area {
+    clear: both;
+}
+
+.faceted-widget {
+    float: left;
+}
+
+#faceted-results .photoAlbumEntry {
+    box-sizing: border-box;
+    margin: 0;
+ /*   padding: 1% 1% 0.5%;*/
+    width: 100%;
+}
+
+#faceted-results .photoAlbumEntry a:hover .photoAlbumEntryTitle {
+    color: #D7004E !important;
+}
+
+#faceted-results .photoAlbumEntry a:hover .photoAlbumEntryDescription {
+    color: #333 !important;
+}
+
+.photoAlbumEntry img {
+    max-width: 100%;
+    width: 100%;
+}
+
+.photoAlbumEntryTitle::before, .faceted-criteria-hide-show, .faceted-criteria-hide {
+    display: none;
+}
+
+#content .widget-fieldset li {
+    min-height: 20px;
+}
+
+#faceted-results .day {
+    color: #018ab7;
+    float: left;
+    font-size: 150%;
+    margin-top: 1em;
+    width: 100%;
+}
+
+#faceted-results .day .photoAlbumEntry {
+    font-size: 14px;
+}
+
+.multi-days .photoAlbumEntry {
+    background-color: #f2f2f2;
+}
+
+.bloc-item {
+    min-height: 360px;
 }
