--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -217,21 +217,21 @@ h1, h2, h3, h4, h5, h6, #portal-globalnav li a {
     width: 100%;
 }
 .theme1 a::before {
-    content: url("http://127.0.0.2:8080/liege/fr//images-spirit/communal.png");
+    content: url("/images-spirit/communal.png");
     display: block;
     position: absolute;
     left: 0;
     z-index: 1;
 }
 .theme2 a::before {
-    content: url("http://127.0.0.2:8080/liege/fr//images-spirit/vivre.png");
+    content: url("/images-spirit/vivre.png");
     display: block;
     position: absolute;
     left: 0;
     z-index: 1;
 }
 .theme3 a::before {
-    content: url("http://127.0.0.2:8080/liege/fr//images-spirit/decouvrir.png");
+    content: url("/images-spirit/decouvrir.png");
     display: block;
     position: absolute;
     left:0;
