Change style for homepage in mobile
This refs / ##

--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -79,3 +79,241 @@
     position: relative;
     float: right;
 }
+.main-homepage #advanced-breadcrumbs {
+    color: #34495e !important;
+}
+.main-homepage #nav-wrapper {
+    z-index: 3;
+    margin: 0;
+    width: 100%;
+    left: 0;
+    top: 100% !important;
+    background-color: #FFFFFF;
+    position: relative;
+}
+.main-homepage #mobnav-btn, .advb-title {
+    margin: 0;
+    border-radius: 0;
+}
+.main-homepage .advb-submenu {
+    padding-left: 0 !important;
+    margin-bottom: 0 !important;
+    margin-top: 0 !important;
+}
+.main-homepage .advb-submenu ul li:last-child {
+    margin-bottom: 0.5em;
+}
+.main-homepage #search-wrapper{
+    display: none;
+}
+.main-homepage #top-logo-slogan-actions {
+    display: flex;
+    flex-flow: column nowrap;
+}
+.main-homepage #top-logo-slogan-actions-inner {
+    flex-flow: column wrap;
+    order: 1;
+}
+.main-homepage #top-banner {
+    order: 2;
+}
+.main-homepage #nav-wrapper {
+    order: 4;
+}
+.main-homepage #portal-logo {
+    margin: 0 !important;
+}
+.main-homepage #portal-logo>img {
+    width: 100%;
+}
+.main-homepage #top-logo-inner {
+    height: 120px;
+    width: 120px;
+}
+.main-homepage #portal-top::after {
+    display: none;
+}
+.main-homepage #portal-columns {
+    padding-top: 0;
+}
+body.main-homepage {
+    padding: 0 !important;
+}
+.main-homepage #portal-column-content{
+    width: 100%;
+}
+.main-homepage #slider-a-la-une.flexslider .flex-caption{
+    width: 100%;
+    margin-top: 0;
+}
+.main-homepage .slider-carousel .flex-direction-nav {
+    justify-content: space-between !important;
+    position: absolute !important;
+    top: 25%;
+    width: 100%;
+}
+.main-homepage .slider-carousel .flex-direction-nav li {
+    background: #000000 !important;
+}
+.main-homepage #content #accueil .flexslider .slides>li{
+    position: relative;
+}
+.main-homepage #slider-a-la-une .read-next-link{
+    display: block;
+    position: absolute;
+    bottom: 0;
+    margin-left: 2em;
+    padding: 1em;
+    background: #d7004e;
+    color: #ffffff;
+}
+.main-homepage .icone-container {
+    display: flex;
+    flex-flow: wrap;
+    margin: 1em 0;
+}
+.main-homepage .icone-inner {
+    display: block;
+    text-align: center;
+    width: 50%;
+    float: left;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+}
+.main-homepage .icone-inner img {
+    width: 30%;
+}
+.main-homepage .icone-inner h3,
+.main-homepage .icone-inner p {
+    margin: 0 !important;
+    padding: 0 1em;
+    -webkit-margin-before: 0px;
+    -webkit-margin-after: 0px;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+.main-homepage .icone-inner h3 a{
+    color: #d7004e !important;
+}
+.main-homepage .slider-multiple .carousel.flexslider .flex-direction-nav, .slider-carousel .flex-direction-nav {
+    display: flex;
+    flex-flow: row nowrap;
+    position: absolute !important;
+    top: 20%;
+    width: 100%;
+    justify-content: space-between;
+}
+.main-homepage .titre-rss{
+    padding-left: 0;
+    width: auto;
+    text-align: center;
+    padding: 2em;
+}
+.main-homepage .agenda .titre h2{
+    padding-bottom: 0;
+}
+.main-homepage .agenda .results {
+    padding: 0;
+    width: 100%;
+    margin-bottom: 50px;
+}
+.main-homepage #content .results ul{
+    padding-left: 1em;
+    padding-right: 1em;
+}
+.main-homepage .agenda .results ul .bloc-item {
+    width: 100% !important;
+}
+.main-homepage .agenda .results ul .bloc-item h3 {
+    margin-top: 0;
+    padding-left: 0.5em;
+    text-align: left;
+}
+.main-homepage .agenda .results ul .bloc-item .day-month{
+    position: relative;
+    float: left;
+}
+.main-homepage .lead-image-wrapper a img{
+    width: 100%;
+}
+.main-homepage #multimediaviewlet{
+    margin: 0;
+}
+.main-homepage #multimediaviewlet::after {
+    display: none;
+}
+.main-homepage #multimediaviewlet .albums-container,
+.main-homepage #multimediaviewlet .videos-container{
+    width: 100% !important;
+    position: relative;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    padding-bottom: 0 !important;
+    padding-left: 0 !important;
+}
+.main-homepage #multimediaviewlet .left {
+    float: left;
+    width: 100%;
+}
+.main-homepage #multimediaviewlet .lead-image-wrapper {
+    width: 100%;
+}
+.main-homepage .section-notheme #multimediaviewlet h2, #multimediaviewlet h2{
+    position: absolute;
+    padding: 0.5em;
+    color: #FFFFFF !important;
+    z-index: 4;
+    background: #000000;
+}
+.main-homepage #multimediaviewlet .albums-container .link-all,
+.main-homepage #multimediaviewlet .videos-container .link-all{
+    background: #d7004e !important;
+    float: right;
+    right: 0;
+    margin-top: -60px;
+    position: absolute;
+    bottom: 0;
+}
+.main-homepage .iframe-responsive-wrapper .iframe-ratio{
+    margin-bottom: 0;
+}
+.main-homepage .voir-tout{
+    margin-top: -110px;
+    top: 0;
+}
+.main-homepage #footer-sitemap div.footer-sitemap-item {
+    display: none;
+}
+.main-homepage #footer-sitemap{
+    padding-left: 1em;
+    padding-right: 1em;
+    width: auto;
+    margin: 0;
+}
+.main-homepage #footer-sitemap div.footer-static {
+    margin: 30px;
+    padding-bottom: 0;
+    line-height: 30px;
+}
+.main-homepage #footer-sitemap div.footer-static p {
+    border-bottom: 1px solid grey;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    padding-bottom: 1em;
+    padding-top: 1em;
+}
+.main-homepage .social-list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+}
+.main-homepage #footer-social .social {
+    display: inline-block;
+    height: 100%;
+}
