--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -182,6 +182,14 @@ dl.portlet ul.navTreeLevel1 .navTreeItem {
     background: #f5f5f5;
 }
 
+#portal-columns #portal-column-one .portletNavigationTree dd ul.navTreeLevel2{
+    padding-top:0;
+}
+
+#portal-columns #portal-column-one .portletNavigationTree dd ul.navTreeLevel2 li a {
+    padding-left: 3em !important;
+}
+
 #portal-columns #portal-column-one .portletNavigationTree dd ul li a {
     padding: 1em !important;
     border-top: 2px solid white; 
