--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -104,9 +104,7 @@ h1, h2, h3, h4, h5, h6, #portal-globalnav li a {
     margin-left: auto;
 }
 #portal-breadcrumbs {
-    margin-left: calc(183px);
-    margin-right: auto;
-    margin-top:2em;
+    margin:2em auto 0;
     width: @width-content;
 }
 #portal-breadcrumbs,
@@ -265,7 +263,9 @@ h1, h2, h3, h4, h5, h6, #portal-globalnav li a {
 #portal-globalnav .selected a{
     text-decoration: none;
 }
-#cpskin-slogan-titre,
+#cpskin-slogan-titre {
+    display: none;
+}
 #cpskin-slogan-description{
     font-size: 130%;
 }
@@ -343,6 +343,8 @@ ul.navTreeLevel0 li.sfHover a{
 }
 .LSBox #searchGadget{
     height: 3.5em;
+    border: 1px solid lightgray;
+    padding-left: 1.25em;
 }
 #btn-search{
     float: right;
@@ -362,7 +364,7 @@ a.btn-search {
     position: relative;
     float: none;
     right: 0;
-    top:0;
+    top:-1px;
 }
 .portal-search-hidden,
 .portal-search-hidden .LSBox #searchGadget{
@@ -929,15 +931,6 @@ dl.actionMenu.activated dt a{
     background: @theme !important;
     width: 60px;
     height: 60px;
-    margin-bottom: 0;
-    margin-top: 30px;
-    margin-right: 0;
-    overflow: hidden;
-    right: 0;
-}
-#multimediaviewlet .albums-container .link-all {
-    background: @voir-tout-black !important;
-    right: 90%;
 }
 #portal-footer{
     margin: 1em 0 0 ;
