--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -526,3 +526,91 @@ fieldset#form-groups-related_contacts,
 .bloc-item {
     min-height: 360px;
 }
+//footer
+.footer-sitemap-item{
+   display:none;
+}
+.footer-bloc {
+    display: inline-block;
+    width: calc(100% / 3 - 0.5em);
+    vertical-align: top;
+    box-sizing: border-box;
+}
+.bloc-info {
+    border: 1px solid #464646;
+    padding: 2em;
+    margin-bottom: 2em;
+}
+#footer-sitemap a,
+#footer-sitemap h3 {
+    color: #fff;
+}
+#footer-sitemap h3{
+    font-size:110%;
+    text-transform:uppercase;
+    padding-bottom:0.5em;
+}
+.footer-bloc.bloc-lien ul {
+    list-style: inside;
+    list-style-type: square;
+}
+.footer-bloc.bloc-lien li{
+   display:list-item;
+   line-height: 2em;
+}
+.footer-bloc.bloc-lien {
+    padding: 0 0 0 3em;
+}
+.lien-interne {
+    padding-right: 1em;
+}
+.lien-interne, .lien-externe {
+    display: inline-block;
+    width: calc(49%);
+    box-sizing: border-box;
+    vertical-align: top;
+font-size:95%;
+}
+.footer-bloc .mail::before {
+    content: "\E818";
+    font-family: fontello;
+    margin-left: -1.5em;
+    display: block;
+    float: left;
+}
+.footer-bloc .horloge::before {
+    content: "\E806";
+    font-family: fontello;
+    margin-left: -1.5em;
+    display: block;
+    float: left;
+}
+.footer-bloc .horloge,
+.footer-bloc .mail {
+    background: none;
+    padding-left: 1.5em;
+}
+.footer-bloc.bloc-adresse{
+   padding-right:3em;
+}
+.bloc-adresse p {
+    border-bottom: 1px solid #464646;
+    padding: 1.5em 0;
+}
+.bloc-adresse p:last-child{
+    border:none;
+}
+.bloc-adresse img {
+    width: 80px;
+    height: auto;
+}
+#footer-social {
+    margin: 0 auto;
+    max-width: calc(32.8333333333%);
+    position: relative;
+    top: -9em;
+}
+//mobile
+.advb-submenu .advb-title {
+    background-color: #404040;
+}
