--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -2,6 +2,28 @@
 #portal-columns {
    padding-right: 0;
 }
+//header
+#top-logo{
+   z-index: 2;
+}
+#top-logo-inner #portal-searchbox{
+   position: relative;
+   top:100%;
+   background: #000;
+   margin-left: -3em;
+   padding: 3em 0;
+   width:300%;
+}
+.LSBox #searchGadget{
+   width: 18em;
+}
+.LSBox::after{
+   display: none;
+}
+#visual-portal-wrapper #LSResult{
+   float: none;
+   width: 89%;
+}
 // bloc zoom
 #accueil .bloc-document .zoom .img img {
     height: 100% !important;
@@ -299,7 +321,6 @@ body.main-homepage {
     line-height: 30px;
 }
 .main-homepage #footer-sitemap div.footer-static p {
-    border-bottom: 1px solid grey;
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-margin-start: 0px;
@@ -316,4 +337,18 @@ body.main-homepage {
 .main-homepage #footer-social .social {
     display: inline-block;
     height: 100%;
+}
+.footer-static .footer-bloc {
+    display: block;
+    width: 100%;
+}
+.footer-bloc.bloc-lien{
+   display: none;
+}
+#visual-portal-wrapper #footer-social {
+    max-width: 100%;
+    top: 0;
+}
+#visual-portal-wrapper #footer-social .social {
+    width: 100%;
 }
